hls/workspace/nnet/solution1/csim/build/apcc.log
INFO: [HLS 200-10] Running '/opt/Xilinx/Vivado/2017.4/bin/unwrapped/lnx64.o/apcc'
INFO: [HLS 200-10] For user 'sergiu' on host 'kalecgos' (Linux_x86_64 version 4.13.0-38-generic) on Wed Apr 25 16:26:03 EEST 2018
INFO: [HLS 200-10] On os Ubuntu 16.04.4 LTS
INFO: [HLS 200-10] In directory '/home/sergiu/git/lic/hls/workspace/nnet/solution1/csim/build'
In file included from ../../nnet.c:4:
In file included from /opt/Xilinx/Vivado/2017.4/common/technology/autopilot/ap_fixed.h:51:
/opt/Xilinx/Vivado/2017.4/common/technology/autopilot/ap_int.h:56:2: error: C++ is required to include this header file
#error C++ is required to include this header file
 ^
In file included from ../../nnet.c:4:
In file included from /opt/Xilinx/Vivado/2017.4/common/technology/autopilot/ap_fixed.h:55:
/opt/Xilinx/Vivado/2017.4/common/technology/autopilot/ap_fixed_special.h:66:10: fatal error: 'complex' file not found
#include <complex>
         ^
2 errors generated.
ERROR: [HLS 200-101] Message ID '1-1' value invalid for uint argument.

FORMAT
  ap_puts_err [OPTIONS] [ Message namespace] [ Message ID] [ Message string] [ Tcl message key]
      <string>
      <uint>
      <string>
      <string>

